# SeGn

./: .gitignore  LICENSE  README.md  test_mcp.py
ai/context/: stack.md
knowledge/: evaluation_report.md
knowledge/business/: problem-canvas.md
knowledge/business/personas/: Anka.md  Julka.md  Kasia.md  (+3 more)
my-hackathon-app/: .dockerignore  .gitignore  GCP_CLOUD_RUN_DEPLOYMENT.md  README.md  cloudbuild.yaml  package-lock.json  package.json
my-hackathon-app/apps/mcp_analogy/mcp-server/: .dockerignore  Dockerfile  README.md  pyproject.toml
my-hackathon-app/apps/mcp_analogy/mcp-server/app/: main.py
my-hackathon-app/apps/mcp_analogy/mcp-server/app/core/: config.py
my-hackathon-app/apps/mcp_analogy/mcp-server/app/services/: analogy_pipeline.py  llm_client.py  models.py
my-hackathon-app/apps/mcp_analogy/mcp-server/app/tools/: __init__.py  analogy.py
my-hackathon-app/apps/mcp_analogy/mcp-server/tests/: test_analogy_pipeline.py
my-hackathon-app/apps/src/backend/: .env.example  .gitignore  Dockerfile  __init__.py  main.py  pyproject.toml
my-hackathon-app/apps/src/backend/api/routers/: v1.py
my-hackathon-app/apps/src/backend/api/schemas/: pydantic_schemas.py
my-hackathon-app/apps/src/backend/dependencies/: depends.py
my-hackathon-app/apps/src/backend/service/: analogy_mcp_service.py  domain_relevance.py  llm_client.py  mcp_service.py  orchestrator.py  response_builder.py  triz_interpreter.py
my-hackathon-app/apps/src/backend/tests/: test_design_by_analogy_response.py
my-hackathon-app/backend/: pyproject.toml
specs/: judging-criteria.md  requirements.md
(+34 files in other folders)
