[project]
name = "design-by-analogy-mcp"
version = "0.1.0"
description = "Generic Design by Analogy MCP server"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.1",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.14.1",
    "starlette>=1.3.1",
    "uvicorn>=0.48.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
