[project]
name = "backend"
version = "0.1.0"
authors = [
    { name = "Jan Dyndor", email = "jandyndor@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "backend" = "." }
packages = ["backend"]
